# smart-wearable

./: .gitignore  build-and-run.sh  readme.md
client/: platformio.ini
client/include/: ir_buttons.h  wifi_config.h
client/include/images/: chains.h  droplets.h  fox.h  lock.h  stars.h
client/src/: chains.c  droplets.c  fox.c  lock.c  main.cpp  stars.c
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
server/templates/: index.html.tera
